[gd_scene load_steps=6 format=3 uid="uid://biitjvltosd8d"]

[ext_resource type="Script" path="res://scenes/file_handler.gd" id="1_2ioyv"]
[ext_resource type="FontFile" uid="uid://dne2fc1los10l" path="res://assets/conthrax-sb.otf" id="2_6qhgy"]
[ext_resource type="Texture2D" uid="uid://bhkvair1q4i1a" path="res://assets/icons/animation.png" id="3_x8jgv"]
[ext_resource type="Shader" path="res://scenes/invert.gdshader" id="4_ctudg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ssj6t"]
shader = ExtResource("4_ctudg")

[node name="File" type="Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ioyv")

[node name="pane000" type="Control" parent="."]
anchors_preset = 0
offset_right = 941.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="pane000"]
layout_mode = 0
offset_right = 945.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.560784)

[node name="Label" type="Label" parent="pane000"]
layout_mode = 0
offset_left = 45.0
offset_top = 4.0
offset_right = 782.0
offset_bottom = 37.0
theme_override_colors/font_outline_color = Color(0.360784, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_6qhgy")
theme_override_font_sizes/font_size = 26
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa..."
vertical_alignment = 1

[node name="info" type="Button" parent="pane000"]
layout_mode = 0
offset_left = 791.0
offset_top = 4.0
offset_right = 939.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.658824, 0, 0, 0.294118)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_6qhgy")
theme_override_font_sizes/font_size = 20
text = "OPTIONS"

[node name="ColorRect2" type="ColorRect" parent="pane000"]
custom_minimum_size = Vector2(4.845, 0)
layout_mode = 0
offset_left = 782.0
offset_top = 4.0
offset_right = 787.0
offset_bottom = 37.0
color = Color(0.603922, 0, 0, 0.439216)

[node name="TextureRect" type="TextureRect" parent="pane000"]
texture_filter = 2
material = SubResource("ShaderMaterial_ssj6t")
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 38.0
offset_bottom = 37.0
texture = ExtResource("3_x8jgv")

[node name="pane001" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 941.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="pane001"]
layout_mode = 0
offset_right = 945.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.560784)

[node name="HBoxContainer" type="HBoxContainer" parent="pane001"]
layout_mode = 0
offset_left = 7.0
offset_top = 3.0
offset_right = 946.0
offset_bottom = 37.0

[node name="back" type="Button" parent="pane001/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.658824, 0, 0, 0.294118)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_6qhgy")
theme_override_font_sizes/font_size = 20
text = "< BACK"

[node name="4" type="ColorRect" parent="pane001/HBoxContainer"]
custom_minimum_size = Vector2(4.845, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
color = Color(0.603922, 0, 0, 0.439216)

[node name="export" type="Button" parent="pane001/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.658824, 0, 0, 0.294118)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_6qhgy")
theme_override_font_sizes/font_size = 20
text = "EXPORT"

[node name="2" type="ColorRect" parent="pane001/HBoxContainer"]
custom_minimum_size = Vector2(4.845, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
color = Color(0.603922, 0, 0, 0.439216)

[node name="replace" type="Button" parent="pane001/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.658824, 0, 0, 0.294118)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_6qhgy")
theme_override_font_sizes/font_size = 20
text = "REPLACE"

[node name="5" type="ColorRect" parent="pane001/HBoxContainer"]
custom_minimum_size = Vector2(4.845, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
color = Color(0.603922, 0, 0, 0.439216)

[node name="remove" type="Button" parent="pane001/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.658824, 0, 0, 0.294118)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_6qhgy")
theme_override_font_sizes/font_size = 20
text = "REMOVE"

[node name="3" type="ColorRect" parent="pane001/HBoxContainer"]
custom_minimum_size = Vector2(4.845, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
color = Color(0.603922, 0, 0, 0.439216)

[node name="rename" type="Button" parent="pane001/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.658824, 0, 0, 0.294118)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_6qhgy")
theme_override_font_sizes/font_size = 20
text = "RENAME"

[node name="6" type="ColorRect" parent="pane001/HBoxContainer"]
custom_minimum_size = Vector2(4.845, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
color = Color(0.603922, 0, 0, 0.439216)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 945.0
offset_bottom = 3.0
color = Color(0.603922, 0, 0, 0.439216)

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_top = 37.0
offset_right = 945.0
offset_bottom = 40.0
color = Color(0.603922, 0, 0, 0.439216)

[node name="ColorRect" type="ColorRect" parent="ColorRect/ColorRect"]
layout_mode = 0
offset_left = 3.0
offset_top = -34.0
offset_right = 37.0
offset_bottom = -31.0
rotation = 1.5708
color = Color(0.603922, 0, 0, 0.439216)

[node name="ColorRect" type="ColorRect" parent="ColorRect/ColorRect/ColorRect"]
layout_mode = 0
offset_left = -6.10352e-05
offset_top = -942.0
offset_right = 33.9999
offset_bottom = -939.0
color = Color(0.603922, 0, 0, 0.439216)

[connection signal="pressed" from="pane000/info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="pane001/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="pane001/HBoxContainer/export" to="." method="_on_export_pressed"]
[connection signal="pressed" from="pane001/HBoxContainer/replace" to="." method="_on_replace_pressed"]
[connection signal="pressed" from="pane001/HBoxContainer/remove" to="." method="_on_remove_pressed"]
[connection signal="button_down" from="pane001/HBoxContainer/rename" to="." method="_on_rename_button_down"]
